# clovers-service

./: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  back-fly.toml  db-fly.toml  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  init.sql  render_scene.rest
.github/workflows/: ci.yml  rust.yml  typescript.yml
clovers-back/: .env.example  Cargo.toml  Dockerfile  dev.Dockerfile
clovers-back/src/: common.rs  main.rs  preview.rs  render_result.rs  render_task.rs  rest.rs  store.rs  ws.rs
clovers-batch/: .env.example  Cargo.toml  Dockerfile  dev.Dockerfile
clovers-batch/src/: draw_cpu.rs  main.rs  render_result.rs  render_task.rs  store.rs
clovers-front/: .eslintrc.json  Dockerfile  README.md  dev.Dockerfile  fly.toml  package-lock.json  package.json
clovers-front/public/: index.html
clovers-front/src/: ActionForm.tsx  App.scss  App.test.tsx  App.tsx  Button.scss  Button.tsx  CameraForm.tsx  DeleteButton.scss  DeleteButton.tsx  Input.scss  Input.tsx  Material.tsx  OptionsForm.scss  Preview.scss  Preview.tsx  RenderOptions.scss  RenderOptions.tsx  RenderOptionsForm.scss  RenderOptionsForm.tsx  RenderQueue.tsx  RenderResults.tsx  SceneForm.tsx  SceneObject.tsx  ThemeToggle.tsx  colors.scss  config.ts  index.scss  index.tsx  io.ts  ws.ts
clovers-front/src/Examples/: Example.tsx  boing.json  cornell.json  cornell_with_smoke.json  dispersive.json  grey.json  scene.json  spatial_checker_smoke.json
clovers-front/src/Forms/: ActionForm.tsx  Actions.tsx  Camera.tsx  CameraForm.tsx  ObjectsForm.tsx  RenderOptions.scss  RenderOptions.tsx  RenderOptionsForm.tsx  Scene.tsx
clovers-front/src/Inputs/: Button.scss  Checkbox.tsx  CheckboxInput.tsx  DeleteButton.scss  File.tsx  FileInput.tsx  Input.scss  Number.tsx  Text.tsx  ThemeToggle.tsx
clovers-front/src/Materials/: Dielectric.tsx  DiffuseLight.tsx  Dispersive.tsx  Isotropic.tsx  Lambertian.tsx  Material.tsx  Metal.tsx
clovers-front/src/Objects/: Boxy.tsx  ConstantMedium.tsx  FlipFace.tsx  MovingSphere.tsx  Quad.tsx  Rotate.tsx  RotateY.tsx  STL.tsx  SceneObject.tsx  Sphere.tsx  Translate.tsx  Triangle.tsx
clovers-front/src/Textures/: SolidColor.tsx  SpatialChecker.tsx  SurfaceChecker.tsx  Texture.tsx
clovers-preview/: .env.example  Cargo.toml  Dockerfile  dev.Dockerfile
clovers-preview/src/: main.rs  preview.rs
clovers-svc-common/: Cargo.toml
clovers-svc-common/src/: draw_cpu.rs  handlers.rs  lib.rs  store.rs
clovers-svc-common/src/handlers/: preview_result.rs  preview_task.rs  render_result.rs  render_task.rs
