[package]
name = "clovers-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
axum = { version = "0.6.20", features = ["macros", "ws"] }
clovers-svc-common = { path = "../clovers-svc-common" }
dotenv = "0.15.0"
futures = "0.3.30"
redis = { version = "0.22.3", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "^0.6.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "json",
] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tower_governor = "0.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
