[package]
name = "clovers-batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
clovers-svc-common = { path = "../clovers-svc-common" }
dotenv = "0.15.0"
image = "0.24.7"
redis = { version = "0.22.3", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "json",
] }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
