[package]
name = "clovers-svc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clovers = { git = "https://github.com/Walther/clovers/", rev = "b2ac7368111c275ccc767eb75d4b02bc29605363", default-features = false, features = ["serde-derive", "stl"] }
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
rayon = "1.6.1"
redis = { version = "0.22.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "postgres", "uuid", "runtime-tokio-rustls", "json" ] }
tracing = "0.1"
uuid = { version = "1.2.2", features = [ "v4", "serde" ]}
